styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    @font-face {
        font-family: 'Mona Sans';
        src: url('../public/fonts/mona-sans/MonaSans.woff2') format('woff2 supports variations'),
        url('../public/fonts/mona-sans/MonaSans.woff2') format('woff2-variations');
        font-weight: 200 900;
        font-stretch: 75% 125%;
    }
    @font-face {
        font-family: 'Hubot Sans';
        src: url('../public/fonts/hubot-sans/hubot-sans.woff2') format('woff2 supports variations'),
        url('../public/fonts/hubot-sans/hubot-sans.woff2') format('woff2-variations');
        font-weight: 200 900;
        font-stretch: 75% 125%;
    }
    html {
        font-family: "Mona Sans";
    }

    h1, h2, h3, h4, h5, h6 {
        font-family: "Hubot Sans";
    }
}

svg {
    @apply inline-block;
}

